--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
     "ember": "./bin/ember"
   },
   "dependencies": {
-    "sync-prompt": "*",
-    "commander": "1.1.1",
-    "cli-color": "0.2.1",
-    "walk": "2.2.1",
-    "handlebars": "1.0.12",
-    "fleck": "0.5.1",
     "browserify": "2.x",
+    "cli-color": "0.2.1",
+    "commander": "1.1.1",
+    "ember-template-compiler": "^1.3.0",
+    "fleck": "0.5.1",
     "fs-extra": "0.5.0",
-    "glob": "3.2.1",
-    "request": "~2.21.0",
     "fsmonitor": "~0.2.2",
+    "glob": "3.2.1",
+    "handlebars": "1.0.12",
     "pathspec": "~0.9.2",
-    "ember-template-compiler": "1.3.0"
+    "request": "~2.21.0",
+    "sync-prompt": "*",
+    "walk": "2.2.1"
   },
   "devDependencies": {
     "ember-template-compiler": "^1.3.0",
