--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "browserify": "2.x",
     "cli-color": "0.2.1",
     "commander": "1.1.1",
-    "ember-template-compiler": "^1.3.0",
+    "ember-template-compiler": "^1.8.0",
     "fleck": "0.5.1",
     "fs-extra": "0.5.0",
     "fsmonitor": "~0.2.2",
     "glob": "3.2.1",
-    "handlebars": "1.0.12",
+    "handlebars": "^2.0.0",
     "pathspec": "~0.9.2",
     "request": "~2.21.0",
     "sync-prompt": "*",
