--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "browserify": "2.x",
     "cli-color": "0.2.1",
     "commander": "1.1.1",
-    "ember-template-compiler": "^1.8.0",
+    "ember-template-compiler": ">=1.9.0-alpha",
     "fleck": "0.5.1",
     "fs-extra": "0.5.0",
     "fsmonitor": "~0.2.2",
